# ArKan

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: backward.rs  forward.rs  gpu_backward.rs  gpu_forward.rs  latency.rs  memory.rs  optimizer.rs  scaling.rs  spline_config.rs
docs/: ARCHITECTURE.md  FUNCTIONALITY_AUDIT.md  README.md
docs/audit/: 00-bspline.md  01-cpu-forward.md  02-cpu-backward.md  03-cpu-training.md  04-gpu-forward.md  05-gpu-backward.md  06-gpu-training.md  07-optimizers.md  08-memory.md  09-serialization.md  10-error-handling.md  11-loss-functions.md  12-baked-model.md  13-config.md  14-examples.md  14-game2048.md  15-summary.md  16-action-items.md  README.md  changelog.md
examples/: basic.rs  comprehensive_test.rs  gpu_comprehensive_test.rs  gpu_forward.rs  training.rs
examples/game2048/: Cargo.toml
examples/game2048/scripts/: train_pykan.py
examples/game2048/src/: env.rs  game.rs  main.rs  utils.rs
examples/game2048/src/agents/: heuristic.rs  kan_dqn.rs  mod.rs  random.rs
examples/game2048/src/train/: cpu.rs  gpu.rs  mod.rs
examples/mnist/: Cargo.toml
examples/mnist/src/: main.rs
examples/sinusoid/: Cargo.toml
examples/sinusoid/src/: main.rs
scripts/: bench_pytorch.py  bench_pytorch_gpu.py  bench_pytorch_train.py  export_spline_data.py  pytorch_optimizer_reference.py  pytorch_reference_values.json
src/: baked.rs  buffer.rs  config.rs  error.rs  layer.rs  lib.rs  loss.rs  network.rs  optimizer.rs  spline.rs
src/gpu/: backend.rs  layer.rs  mod.rs  network.rs  optimizer.rs  pipeline.rs  shaders.rs  tensor.rs  uniforms.rs  workspace.rs
tests/: backward_correctness.rs  coverage_tests.rs  examples_integration.rs  forward_correctness.rs  gpu_backward_parity.rs  gpu_memory_safety.rs  gpu_parity.rs  gpu_training_parity.rs  gradient_check.rs  memory_management.rs  optimizer_correctness.rs  pytorch_reference.rs  regression_v020.rs  spline_edge_cases.rs  spline_parity.rs  training_options.rs
