[package]
name = "arkan"
version = "0.1.0"
edition = "2021"
description = "High-performance KAN (Kolmogorov-Arnold Network) for poker solver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LutwigStack/ArKan"
documentation = "https://docs.rs/arkan"
readme = "README.md"
keywords = ["kan", "ml", "simd", "spline", "inference"]
categories = ["algorithms", "science"]
exclude = ["target/*", "scripts/*", ".github/*", "README for KAN.md"]

[dependencies]
# SIMD abstractions
wide = "0.7"
rand = { version = "0.8", features = ["small_rng"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# Half precision (optional, for baked models)
half = { version = "2.4", optional = true }

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand_distr = "0.4"

[features]
default = []
simd = []
parallel = []
serde = ["dep:serde", "dep:bincode"]
quantization = ["half"]
nightly = []  # For SIMD intrinsics that require nightly

[[bench]]
name = "forward"
harness = false
