[package]
name = "arkan"
version = "0.1.1"
edition = "2021"
description = "High-performance KAN (Kolmogorov-Arnold Network) for poker solver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LutwigStack/ArKan"
documentation = "https://docs.rs/arkan"
readme = "README.md"
keywords = ["kan", "ml", "simd", "spline", "inference"]
categories = ["algorithms", "science"]
exclude = ["target/*", "scripts/*", ".github/*", "README for KAN.md"]

[dependencies]
# SIMD abstractions
wide = "0.7"
rand = { version = "0.8", features = ["small_rng"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# Half precision (optional, for baked models)
half = { version = "2.4", optional = true }

# Error handling
thiserror = "1.0"

# GPU backend (optional)
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.18", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand_distr = "0.4"

[features]
default = []
simd = []
parallel = []
serde = ["dep:serde", "dep:bincode"]
quantization = ["half"]
nightly = []  # For SIMD intrinsics that require nightly
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:log"]

[[bench]]
name = "forward"
harness = false

[[bench]]
name = "backward"
harness = false

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "spline_config"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "optimizer"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "gpu_forward"
harness = false
required-features = ["gpu"]
